[tool.poetry]
name = "llama-index-sandbox"
version = "0.1.0"
description = "Sandbox project for testing out various llama-index functionalities."
authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "sandbox", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
